--- a/projetos/templates/projetos/dinamicas.html
+++ b/projetos/templates/projetos/dinamicas.html
@@ -18,11 +18,8 @@
             <big><b>{{e.startDate}}</b></big><br>
             {% if e.projeto %}
               <b>Projeto:</b> <a href="{% url 'completo' e.projeto.id %}">
-                {% if e.projeto.titulo_final %}
-                  {{e.projeto.titulo_final}}
-                {% else %}
-                  {{e.projeto.titulo}}
-                {% endif %}</a><br>
+                {{e.projeto.get_titulo}}
+              </a><br>
               <b>Organização:</b> <a href="{% url 'organizacao_completo' e.projeto.empresa.login %}">{{ e.projeto.empresa.nome_empresa }}</a><br>
               <b>Alunos:</b>
               <ol>
