--- a/projetos/templates/projetos/organizacao_completo.html
+++ b/projetos/templates/projetos/organizacao_completo.html
@@ -67,7 +67,7 @@
     {% for contrato in organization.documento_set.all %}
         <li><a href="../..{{MEDIA_URL}}{{ contrato.documento }}"> {{ contrato }} 
         {% if contrato.projeto %}
-          - {% if contrato.projeto.titulo_final %}{{contrato.projeto.titulo_final}}{% else %}{{contrato.projeto.titulo}}{% endif %}
+          - {{contrato.projeto.get_titulo}}
         {% endif %}
         {% if contrato.usuario %}
           - {{ contrato.usuario.get_full_name }} 
@@ -85,7 +85,7 @@
           {% if projeto.alocacao_set.count %}
             <u>
           {% endif %}
-          {% if projeto.titulo_final %}{{projeto.titulo_final}}{% else %}{{projeto.titulo}}{% endif %} ({{projeto.ano}}.{{projeto.semestre}})
+          {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
           {% if projeto.alocacao_set.count %}
             </u>
           {% endif %}
