Mostra um X se alocacao não vem de uma opção no mapeamento.

--- a/projetos/templates/projetos/mapeamento_estudante_projeto.html
+++ b/projetos/templates/projetos/mapeamento_estudante_projeto.html
@@ -96,13 +96,17 @@
             {% if opcao %}
               <td style="text-align:center;
                   {% if opcao.projeto == estudante.alocacao_set.last.projeto %}background-color:pink;{% endif %}" 
-                  class="{% if opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">
+                  class="{% if opcao.prioridade == 0 %}red-bold{% elif opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">
                 <a class="prioridade" href="{% url 'completo' opcao.projeto.id %}"
                   data-toggle="tooltip" data-html="true" animation="true" title="
                   {{ opcao.projeto.get_titulo }}
                   "
                 >
-                  {{opcao.prioridade}}
+                  {% if opcao.prioridade == 0 %}
+                    X
+                  {% else %}
+                    {{opcao.prioridade}}
+                  {% endif %}
                 </a>
               </td>
             {% else %}
