--- a/projetos/templates/projetos/emails.html
+++ b/projetos/templates/projetos/emails.html
@@ -42,6 +42,7 @@
               {% for aluno in aplicando %}{{aluno.user.first_name|parse_quote}}%20{{aluno.user.last_name|parse_quote}}%20&lt;{{aluno.user.email|parse_quote}}&gt;,
               {% endfor %}
               ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+              &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
               &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20alunos,%0D%0A%0D%0A
               atenciosamente,%20coordenação%20PFE
             ">Aplicando</a><br>
@@ -54,6 +55,7 @@
               {% for aluno in alocados %}{{aluno.user.first_name|parse_quote}}%20{{aluno.user.last_name|parse_quote}}%20&lt;{{aluno.user.email|parse_quote}}&gt;,
               {% endfor %}
               ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+              &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
               &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20alunos,%0D%0A%0D%0A
               atenciosamente,%20coordenação%20PFE
             ">Alocados</a><br>
@@ -66,6 +68,7 @@
               {% for orientador in orientadores %}{{orientador.user.first_name|parse_quote}}%20{{orientador.user.last_name|parse_quote}}%20&lt;{{ orientador.user.email|parse_quote }}&gt;,
               {% endfor %}
               ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+              &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
               &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20orientadores,%0D%0A%0D%0A
               atenciosamente,%20coordenação%20PFE
             ">Orientadores</a><br>
@@ -78,6 +81,7 @@
               {% for parceiro in parceiros %}{{parceiro.user.first_name|parse_quote}}%20{{parceiro.user.last_name|parse_quote}}%20&lt;{{ parceiro.user.email|parse_quote }}&gt;,
               {% endfor %}
               ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+              &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
               &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20parceiro%20do%20PFE,%0D%0A%0D%0A
               atenciosamente,%20coordenação%20PFE
             ">Parceiros</a><br>
@@ -90,6 +94,7 @@
               {% for banca in bancas %}{{banca.first_name|parse_quote}}%20{{banca.last_name|parse_quote}}%20&lt;{{ banca.email|parse_quote }}&gt;,
               {% endfor %}
               ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+              &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
               &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20membros%20de%20bancas%20do%20PFE,%0D%0A%0D%0A
               atenciosamente,%20coordenação%20PFE
             ">Bancas</a><br>
@@ -113,6 +118,7 @@
                 {% for pessoa in pessoas %}{{pessoa.user.first_name|parse_quote}}%20{{pessoa.user.last_name|parse_quote}}%20&lt;{{ pessoa.user.email|parse_quote }}&gt;,
                 {% endfor %}
                 ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+                &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
                 &amp;subject=PFE%20-%20Projeto:%20{{projeto}}&amp;body=Caros,%0D%0A%0D%0A
                 atenciosamente,%20coordenação%20PFE
               "
@@ -136,6 +142,7 @@
       {% for aluno in todos_alunos %}{{aluno.user.first_name|parse_quote}}%20{{aluno.user.last_name|parse_quote}}%20&lt;{{ aluno.user.email|parse_quote }}&gt;,
       {% endfor %}
       ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+      &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
       &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20alunos,%0D%0A%0D%0A
       atenciosamente,%20coordenação%20PFE
     ">Todos os alunos do PFE</a><br>
@@ -147,6 +154,7 @@
       {% for professor in todos_professores %}{{professor.user.first_name|parse_quote}}%20{{professor.user.last_name|parse_quote}}%20&lt;{{ professor.user.email|parse_quote }}&gt;,
       {% endfor %}
       ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+      &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
       &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20professores%20do%PFE,%0D%0A%0D%0A
       atenciosamente,%20coordenação%20PFE
     ">Todos os professores do PFE</a><br>
@@ -158,6 +166,7 @@
       {% for parceiro in todos_parceiros %}{{parceiro.user.first_name|parse_quote}}%20{{parceiro.user.last_name|parse_quote}}%20&lt;{{ parceiro.user.email|parse_quote }}&gt;,
       {% endfor %}
       ?cc=Luciano%20Pereira%20Soares&lt;lpsoares@insper.edu.br&gt;,PFE&lt;pfe@insper.edu.br&gt;
+      &amp;bcc=Comite%20PFE&lt;comitepfe@insper.edu.br&gt;
       &amp;subject=PFE%20{{semestre}}&amp;body=Caros%20parceiro%20do%PFE,%0D%0A%0D%0A
       atenciosamente,%20coordenação%20PFE
     ">Todos os parceiros do PFE</a><br>
