--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -27,6 +27,7 @@ Data: {% now "j F Y H:i" %}
 <h5>Tabelas de alocação</h5>
 <ul>
     <a href="{% url 'professores_tabela' %}"><li>Professores</li></a>
+    <a href="{% url 'organizacoes_tabela' %}"><li>Organizações</li></a>
 </ul>
 
 <hr>
