--- a/projetos/templates/projetos/mapeamento_estudante_projeto.html
+++ b/projetos/templates/projetos/mapeamento_estudante_projeto.html
@@ -66,7 +66,9 @@
         <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="bottom">Eng</th>
         <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="bottom">CR</th>
         {% for projeto in projetos %}   
-          <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child({{ forloop.counter|add:"3" }})')" style="cursor:pointer;" class="rotate">
+          <th onclick="w3.sortHTML('#MapeamentoTable', '.item', 'td:nth-child({{ forloop.counter|add:"3" }})')" style="cursor:pointer;
+          {% if not projeto.disponivel %}color:lightgray;{% endif %}"
+          class="rotate">
             <div>
               <span>
                 {{projeto.empresa.sigla}}
@@ -95,7 +97,7 @@
           {% for opcao in opcoes %}
             {% if opcao %}
               <td style="text-align:center;
-                  {% if opcao.projeto == estudante.alocacao_set.last.projeto %}background-color:pink;{% endif %}"  
+                  {% if opcao.projeto == estudante.alocacao_set.last.projeto %}background-color:pink;{% endif %}"
                   class="{% if opcao.prioridade == 0 %}red-bold{% elif opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">
                 <a class="prioridade" href="{% url 'completo' opcao.projeto.id %}"
                   data-toggle="tooltip" data-html="true" animation="true" title="
@@ -124,7 +126,7 @@
   <script>
     {% for projeto in projetos %}
       {% if not projeto.disponivel %}  
-        $('table td:nth-child({{ forloop.counter|add:"3" }})').css('border','dotted 2px darkred');
+        $('table td:nth-child({{ forloop.counter|add:"3" }})').css('border','dotted 2px gray');
       {% endif %}
     {% endfor %}
   </script>
