Listagem de Feedbacks

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -29,7 +29,8 @@
     <a href="{% url 'alunos_inscrevendo' %}"><h5>Listagem de Alunos se Inscrevendo</h5>   </a>
     <a href="{% url 'areas' %}">             <h5>Tendência de Áreas de Interesse</h5>     </a>
     <a href="{% url 'mapeamento' %}">        <h5>Mapeamento Estudantes e Opções de Projetos</h5>     </a>
-    
+    <a href="{% url 'lista_feedback' %}"><h5>Listagem de Feedbacks</h5>   </a>
+
     <hr>
 
     <a href="{% url 'propor' %}">            <h5>Propor Grupos para Projetos</h5>         </a>
