alocações de bancas

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -26,8 +26,9 @@ Data: {% now "j F Y H:i" %}
 <hr>
 <h5>Tabelas de alocação</h5>
 <ul>
-    <a href="{% url 'professores_tabela' %}"><li>Professores</li></a>
+    <a href="{% url 'professores_tabela' %}"><li>Orientadores</li></a>
     <a href="{% url 'organizacoes_tabela' %}"><li>Organizações</li></a>
+    <a href="{% url 'bancas_tabela' %}"><li>Bancas</li></a>
 </ul>
 
 <hr>
