--- a/projetos/templates/projetos/professores_tabela.html
+++ b/projetos/templates/projetos/professores_tabela.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-  <h3>Alocação de Professores</h3>
+  <h3>Alocação de Orientadores</h3>
   <br>
   {% for professores,periodo in anos %} 
   <big>{{periodo}}</big>
