--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -6,11 +6,37 @@
 {% endcomment %}
 
 {% block head %}
+  {% load static %}
+  <style>
+    #logotipo {
+      max-height:128px;
+      max-width:128px;
+      height:auto;
+      width:auto;
+      float: right;
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
     <h3>{{parceiro.user.get_full_name}}</h3>
+    {% if not parceiro.user.is_active %}
+        <p style="color: red;">
+            - NÃO ATIVO -
+        </p>
+    {% endif %}>
+    {% if parceiro.cargo %}
+        <strong>cargo:</strong> {{parceiro.cargo}}<br>
+    {% endif %}
     <strong>e-mail:</strong> <a href="mailto:{{parceiro.user.email}}"> &lt;{{parceiro.user.email}}&gt;</a><br>
+    &nbsp;
+    {% if parceiro.telefone %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x260F; {{parceiro.telefone}} &nbsp;{% endif %}
+    {% if parceiro.celular %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x1F4F1; {{parceiro.celular}} &nbsp;{% endif %}
+    {% if parceiro.skype %} <br>&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="skype" style="width:16px;height:16px;">
+    <a href="skype:{{parceiro.skype}}">{{parceiro.skype}}</a>&nbsp; {% endif %}
     <p>&nbsp;</p>
-    <p>&nbsp;</p>
+    {% if parceiro.observacao %}
+        <strong>observações:</strong><br>
+        {{parceiro.observacao|linebreaks}}
+    {% endif %}
 {% endblock %}
