Semana de provas sublinhada em vermelho

--- a/projetos/templates/projetos/calendario.html
+++ b/projetos/templates/projetos/calendario.html
@@ -133,7 +133,7 @@
         </span>
       {% endif %}
     {% endfor %}
-    <br><font style="color: purple">
+    <br><font style="text-decoration: underline solid red">
       Semana de provas sublinhado em vermelho
     </font>
   {% endif %}
