--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -7,35 +7,38 @@
 
 {% block content %}
 
-Data: {% now "j F Y H:i" %}
-<hr>
-<a href="{% url 'emails' %}"><h5>Enviar para lista de e-mails</h5></a>
-<a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
+    Data: {% now "j F Y H:i" %}
+    <hr>
+    <a href="{% url 'emails' %}"><h5>Enviar para lista de e-mails</h5></a>
+    <a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
 
-<hr>
-<h5>Listagem completa</h5>
-<ul>
-    <a href="{% url 'alunos_lista' %}"><li>Alunos</li></a>
-    <a href="{% url 'projetos_fechados' %}"><li>Projetos</li></a>
-    <a href="{% url 'organizacoes_lista' %}"><li>Organizações Parceiras</li></a>
-    <a href="{% url 'todos_parceiros' %}"><li>Parceiros Profissionais</li></a>
-    <a href="{% url 'todos_professores' %}"><li>Professores do PFE</li></a>
-    <!-- <a href="{% url 'comite' %}"><li>Comtê do PFE</li></a> -->
-</ul>
+    <hr>
+    <h5>Listagem completa</h5>
+    <ul>
+        <a href="{% url 'alunos_lista' %}"><li>Alunos</li></a>
+        <a href="{% url 'projetos_fechados' %}"><li>Projetos</li></a>
+        <a href="{% url 'organizacoes_lista' %}"><li>Organizações Parceiras</li></a>
+        <a href="{% url 'todos_parceiros' %}"><li>Parceiros Profissionais</li></a>
+        <a href="{% url 'todos_professores' %}"><li>Professores do PFE</li></a>
+        <!-- <a href="{% url 'comite' %}"><li>Comtê do PFE</li></a> -->
+    </ul>
 
-<hr>
-<h5>Tabelas de alocação</h5>
-<ul>
-    <a href="{% url 'professores_tabela' %}"><li>Orientadores</li></a>
-    <a href="{% url 'organizacoes_tabela' %}"><li>Organizações</li></a>
-    <a href="{% url 'bancas_tabela' %}"><li>Bancas</li></a>
-</ul>
+    <hr>
+    <h5>Tabelas de alocação</h5>
+    <ul>
+        <a href="{% url 'professores_tabela' %}"><li>Orientadores</li></a>
+        <li>Coorientadores</li>
+        <a href="{% url 'organizacoes_tabela' %}"><li>Organizações</li></a>
+        <a href="{% url 'bancas_tabela' %}"><li>Bancas</li></a>
+    </ul>
 
-<hr>
-<a href="{% url 'avisos_listar' %}"><h5>Agenda da Coordenação do PFE</h5></a>
+    <hr>
+    <a href="{% url 'avisos_listar' %}"><h5>Agenda da Coordenação do PFE</h5></a>
 
-<hr>
-<a href="{% url 'exportar' %}"><h5>Exportar dados</h5></a>
-<a href="{% url 'relatorios' %}"><h5>Relatórios</h5></a>
-<a href="{% url 'carregar' %}"><h5>Carregar dados (CUIDADO PODE COMPROMETER BASE DE DADOS)</h5></a>
+    <hr>
+    <a href="{% url 'exportar' %}"><h5>Exportar dados</h5></a>
+    <a href="{% url 'relatorios' %}"><h5>Relatórios</h5></a>
+    <a href="{% url 'propor' %}">            <h5>Propor Grupos para Projetos</h5>         </a>
+    <a href="{% url 'carregar' %}"><h5>Carregar dados (CUIDADO PODE COMPROMETER BASE DE DADOS)</h5></a>
+
 {% endblock %}
