Controle de coorientadores

--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -75,12 +75,24 @@
 
   {% if projeto.orientador %}
   <hr>
-  <h3>Orientador(es)</h3>
+  <h3>Orientador(a)</h3>
   <ul>
     <a href="{% url 'professor_detail' projeto.orientador.id %}">
       <li>{{projeto.orientador.user.get_full_name}}</li>
     </a>
   </ul>
+  {% endif %}
+  {% if coorientadores %}
+    <strong>coorientador(es):</strong><br>
+    {% for coorientador in coorientadores %}
+      <a class="tabulado" href="{% url 'professor_detail' coorientador.usuario.professor.id %}">
+        {{ coorientador.usuario.get_full_name }}
+      </a>
+      {% if coorientador.observacao %}
+        &nbsp;&nbsp;obs: {{coorientador.observacao}}
+      {% endif %}
+      <br>
+    {% endfor %}
   {% endif %}
 
   <hr>
