Atualização do calendario das dinamicas.

--- a/projetos/templates/projetos/dinamicas.html
+++ b/projetos/templates/projetos/dinamicas.html
@@ -15,7 +15,7 @@
       {% for e in encontros %} 
         <tr>
           <td>
-            <big><b>{{e.startDate}}</b></big><br>
+            <big><b>{{e.startDate}} - {{e.endDate|date:'H:i'}}</b></big><br>
             {% if e.projeto %}
               <b>Projeto:</b> <a href="{% url 'completo' e.projeto.id %}">
                 {{e.projeto.get_titulo}}
