Ajuste de lista de projetos e submissão de projeto por empresa.

--- a/projetos/templates/index.html
+++ b/projetos/templates/index.html
@@ -10,10 +10,22 @@
 
 {% block content %}
 
+    {% comment %}
+        (1, 'aluno'),
+        (2, 'professor'),
+        (3, 'parceiro'),
+        (4, 'administrador'),
+    {% endcomment %}
+
     <a href="{% url 'calendario' %}"><h5>Calendário Geral</h5></a>
     <hr>
-    <a href="{% url 'index_aluno' %}"><h5>Área dos Alunos</h5></a>
-    {% if user.tipo_de_usuario != 1 %}
+    {% if user.tipo_de_usuario == 1 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+        <a href="{% url 'index_aluno' %}"><h5>Área dos Alunos</h5></a>
+    {% endif %}
+    {% if user.tipo_de_usuario == 3 or user.tipo_de_usuario == 4 %}
+        <a href="{% url 'index_organizacao' %}"><h5>Área dos Parceiros</h5></a>
+    {% endif %}
+    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
         <a href="{% url 'index_professor' %}"><h5>Área dos Professores</h5></a>
         <a href="{% url 'administracao' %}"><h5>Área Administrativa</h5></a>
     {% endif %}
