--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -16,7 +16,7 @@
     <h5>Listagem completa</h5>
     <ul>
         <a href="{% url 'alunos_lista' %}"><li>Alunos</li></a>
-        <a href="{% url 'projetos_fechados' %}"><li>Projetos</li></a>
+        <a href="{% url 'projetos_lista' 'todos' %}"><li>Projetos</li></a>
         <a href="{% url 'organizacoes_lista' %}"><li>Organizações Parceiras</li></a>
         <a href="{% url 'todos_parceiros' %}"><li>Parceiros Profissionais</li></a>
         <a href="{% url 'todos_professores' %}"><li>Professores do PFE</li></a>
