--- a/projetos/templates/projetos/avisos_listar.html
+++ b/projetos/templates/projetos/avisos_listar.html
@@ -11,6 +11,17 @@
 
 {% block content %}
   <h3>Avisos</h3><br>
+
+  <label for="filter">Filtro:</label>
+  <select id="cxi" class="filter" data-tableId="projetos">
+    <option value="todos" {% if periodo == "todos" %}selected="selected"{% endif %}>todos</option>
+    <option value="comite" {% if periodo == "comite" %}selected="selected"{% endif %}>Comitê PFE</option>
+    <option value="alunos" {% if periodo == "alunos" %}selected="selected"{% endif %}>Alunos</option>
+    <option value="orientadores" {% if periodo == "orientadores" %}selected="selected"{% endif %}>Orientadores</option>
+    <option value="organizacoes" {% if periodo == "organizacoes" %}selected="selected"{% endif %}>Organizações</option>
+  </select>
+  <br><br><br>
+
   {% if avisos %}
     <table>
         <tr>
@@ -26,7 +37,8 @@
         </tr>
   
       {% for a in avisos %} 
-        <tr class="{% if a.delta < dias_passados %}text-success{% else %}text-info{% endif %}" >
+        <tr class="{% if a.delta < dias_passados %}text-success{% else %}text-info{% endif %}"
+            data-type="XXX" >
           <td>
             {{a.delta}}
           </td>
@@ -44,5 +56,40 @@
     <p>Não existem avisos.</p>
   {% endif %}
   <p>&nbsp;</p>
+
+
+  <script type="text/javascript">
+
+    function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
+      var filterValue = $('.filter').val();
+      var row = $('.row'); 
+      row.hide();
+
+      row.each(function(i, el) {
+        
+        if( filterValue == "todas" || filterValue == $(el).attr('data-type') ) {
+            $(el).show();
+        }
+
+      });
+
+    }
+
+    /*
+    function mostra_grafico() { // REFERENTE AO PIE CHART
+    }
+    */
+
+    $(".filter").change(function(){
+      filtra_data();
+      //mostra_grafico();
+    });  
+
+    $(document).ready(function(){
+      filtra_data();
+      //mostra_grafico();
+    });
+  
+  </script>
 
 {% endblock %}
