Ordem vem primeiro parceiros ativos depois os inativos.

--- a/projetos/templates/projetos/organizacao_completo.html
+++ b/projetos/templates/projetos/organizacao_completo.html
@@ -33,13 +33,12 @@
   {% endif %}
   <br><strong>contato(s):</strong><br>
   {% for parceiro in organization.parceiro_set.all %}
-    <li {% if not parceiro.user.is_active %} style="color: lightgrey;" {% endif %}>
-      <a href="{% url 'parceiro_detail' parceiro.id %}"
-        {% if not parceiro.user.is_active %} style="color: lightgrey;" {% endif %}>
+    {% if parceiro.user.is_active %}
+    <li  style="color: lightgrey;">
+      <a href="{% url 'parceiro_detail' parceiro.id %}">
         {{parceiro.user.get_full_name}} &nbsp;
       </a>
-      <a href="mailto:{{parceiro.user.email}}"
-       {% if not parceiro.user.is_active %} style="color: lightgrey;" {% endif %}>
+      <a href="mailto:{{parceiro.user.email}}">
         &lt;{{parceiro.user.email}}&gt;
       </a>
       &nbsp;
@@ -47,8 +46,25 @@
       {% if parceiro.celular %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x1F4F1; {{parceiro.celular}} &nbsp;{% endif %}
       {% if parceiro.skype %} <br>&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="skype" style="width:16px;height:16px;">
       <a href="skype:{{parceiro.skype}}">{{parceiro.skype}}</a>&nbsp; {% endif %}
-      
     </li>
+    {% endif %}
+  {% endfor %}
+  {% for parceiro in organization.parceiro_set.all %}
+    {% if not parceiro.user.is_active %}
+    <li style="color: lightgrey;">
+      <a href="{% url 'parceiro_detail' parceiro.id %}" style="color: lightgrey;">
+        {{parceiro.user.get_full_name}} &nbsp;
+      </a>
+      <a href="mailto:{{parceiro.user.email}}" style="color: lightgrey;">
+        &lt;{{parceiro.user.email}}&gt;
+      </a>
+      &nbsp;
+      {% if parceiro.telefone %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x260F; {{parceiro.telefone}} &nbsp;{% endif %}
+      {% if parceiro.celular %} <br>&nbsp;&nbsp;&nbsp;&nbsp;&#x1F4F1; {{parceiro.celular}} &nbsp;{% endif %}
+      {% if parceiro.skype %} <br>&nbsp;&nbsp;&nbsp;&nbsp;<img src="{% static 'images/skype.png' %}" alt="skype" style="width:16px;height:16px;">
+      <a href="skype:{{parceiro.skype}}">{{parceiro.skype}}</a>&nbsp; {% endif %}
+    </li>
+    {% endif %}
   {% endfor %}
 
   <br><strong>Razão Social:</strong> 
