--- a/projetos/templates/projetos/lista_feedback.html
+++ b/projetos/templates/projetos/lista_feedback.html
@@ -19,15 +19,43 @@
 {% if feedbacks %}
     <table id="FeedbacksTable">
       <tr>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
+        <th>ver</th>
+        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Nome</th>
         <th style="cursor:pointer" class="text-center">e-mail</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th onclick="w3.sortHTML('#FeedbacksTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Data</th>
       </tr>      
       {% for feedback in feedbacks %} 
-        <tr>
-          <td> <a href="{% url 'mostra_feedback' feedback.id %}">{{feedback.nome}}</a> </td>
-          <td> {{feedback.email}} </td>
-          <td> {{feedback.empresa}} </td>
+        <tr class="item">
+          <td class="text-center">
+            <a href="{% url 'mostra_feedback' feedback.id %}">
+              &#x1f441;
+            </a>
+          </td>
+          <td>
+            {% if feedback.nome %}
+              {{feedback.nome}}
+            {% else %}
+              Anônimo
+            {% endif %}
+          </td>
+          <td>
+            {% if feedback.email %}
+              {{feedback.email}}
+            {% else %}
+              Anônimo
+            {% endif %}
+          </td>
+          <td>
+            {% if feedback.empresa %}
+              {{feedback.empresa}}
+            {% else %}
+              Anônimo
+            {% endif %}
+          </td>
+          <td>
+            {{feedback.data}}
+          </td>
         </tr>
       {% endfor %}
     </table>
