Professor ver os agendamento de dinâmicas.

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <h5>Calendários</h5>
+    <h5>Agendamentos</h5>
     <ul>
         <a href="{% url 'bancas_index' %}"><li>Bancas</li></a>
         <a href="{% url 'dinamicas' %}"><li>Dinâmicas</li></a>
